log
nohup: ignoring input
 * Serving Flask app 'app'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://172.31.16.8:5000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 106-148-569
152.59.86.240 - - [01/Aug/2025 05:46:18] "GET /apidocs/ HTTP/1.1" 200 -
152.59.86.240 - - [01/Aug/2025 05:46:18] "[36mGET /flasgger_static/swagger-ui.css HTTP/1.1[0m" 304 -
152.59.86.240 - - [01/Aug/2025 05:46:19] "[36mGET /flasgger_static/swagger-ui-bundle.js HTTP/1.1[0m" 304 -
152.59.86.240 - - [01/Aug/2025 05:46:19] "[36mGET /flasgger_static/swagger-ui-standalone-preset.js HTTP/1.1[0m" 304 -
152.59.86.240 - - [01/Aug/2025 05:46:19] "[36mGET /flasgger_static/lib/jquery.min.js HTTP/1.1[0m" 304 -
152.59.86.240 - - [01/Aug/2025 05:46:20] "GET /apispec_1.json HTTP/1.1" 200 -
127.0.0.1 - - [01/Aug/2025 06:03:07] "GET /api/v1/attendance/health HTTP/1.1" 200 -
106.205.204.122 - - [01/Aug/2025 06:03:52] "GET /api/v1/attendance/health HTTP/1.1" 200 -
106.205.204.122 - - [01/Aug/2025 06:03:52] "[33mGET /favicon.ico HTTP/1.1[0m" 404 -
106.205.204.122 - - [01/Aug/2025 06:04:00] "[33mGET /api/v1/attendance HTTP/1.1[0m" 404 -
106.205.204.122 - - [01/Aug/2025 06:04:03] "[33mGET /api/v1/attendance/ HTTP/1.1[0m" 404 -
106.205.204.122 - - [01/Aug/2025 06:05:04] "GET /apidocs/ HTTP/1.1" 200 -
106.205.204.122 - - [01/Aug/2025 06:05:05] "GET /flasgger_static/swagger-ui.css HTTP/1.1" 200 -
106.205.204.122 - - [01/Aug/2025 06:05:05] "GET /flasgger_static/swagger-ui-bundle.js HTTP/1.1" 200 -
106.205.204.122 - - [01/Aug/2025 06:05:05] "GET /flasgger_static/swagger-ui-standalone-preset.js HTTP/1.1" 200 -
106.205.204.122 - - [01/Aug/2025 06:05:05] "GET /flasgger_static/lib/jquery.min.js HTTP/1.1" 200 -
106.205.204.122 - - [01/Aug/2025 06:05:07] "GET /apispec_1.json HTTP/1.1" 200 -
106.205.204.122 - - [01/Aug/2025 06:05:07] "GET /flasgger_static/favicon-32x32.png HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/attendance-api/app.py', reloading
 * Restarting with stat
  File "/home/ubuntu/attendance-api/app.py", line 4
    """
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 33)
